# fcg-trabalho-final

./: .gitignore  CMakeLists.txt  Laboratorio_1.cbp  Laboratorio_3.cbp  Laboratorio_3.depend  Laboratorio_3.layout  Makefile  Makefile.binary  Makefile.fan  Makefile.macOS  Makefile.strip  README.MD  run.sh  temp.txt
assets/: shader_fragment.glsl
data/: ferriswheel.mtl
include/: bezier.h  camera.h  collisions.h  emitter.h  matrices.h  movement.h  object.h  program.h  renderer.h  utils.h  world.h
src/: bezier.cpp  bezier.h  camera.cpp  collisions.cpp  emitter.cpp  glad.c  main.cpp  matrices.cpp  matrices.h  movement.cpp  object.h  particle.cpp  particle.h  program.cpp  random.cpp  random.h  renderer.h  world.cpp
src/test/: test.cpp
